--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icons/mzutv2-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mzut-v2-pwa</title>
+    <title>mZUTv2 - WEB</title>
   </head>
   <body>
     <div id="root"></div>
